feat: criando validacao para DTO de cadastro de pecas